[package]
name = "hello-gfx"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]

[dependencies]
gfx = "0.16"
gfx_window_glutin = "0.16.0"
glutin = "0.8.1"
winit = "0.6.4"
gfx_text = "0.17"
image = "0.14"

[replace]
"winit:0.6.4" = { git = "https://github.com/stevebob/winit.git", branch = "x11-hidpi-fix" }
"glutin:0.8.1" = { git = "https://github.com/stevebob/glutin.git", branch = "winit-0.6.4" }
